@@ -1,75 +1,73 @@
 package com.example.demo.service;
 
-import com.example.demo.dto.CustomerUnreturnedDTO;
+import com.example.demo.dto.CustomerQueryDTO;
 import com.example.demo.model.Customer;
-import com.example.demo.model.Rental;
 import com.example.demo.repository.CustomerRepository;
-import com.example.demo.repository.RentalRepository;
-import com.example.demo.util.SaveToFile;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
 
-import java.io.IOException;
-import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.temporal.ChronoUnit;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 public class ReportService {
     private final CustomerRepository customerRepository;
-    private final RentalRepository rentalRepository;
+    private final KafkaTemplate<String, String> kafkaTemplate;
+    private static final String TOPIC_NAME = "report-topic";
 
-    public ReportService(CustomerRepository customerRepository, RentalRepository rentalRepository) {
+    public ReportService(CustomerRepository customerRepository, KafkaTemplate<String, String> kafkaTemplate) {
         this.customerRepository = customerRepository;
-        this.rentalRepository = rentalRepository;
+        this.kafkaTemplate = kafkaTemplate;
     }
 
-    public void generateReport() {
-        LocalDate today = LocalDate.now();
+    private int dayDiff(Date date){
+        return (int) ChronoUnit.DAYS.between(date.toInstant().atZone(ZoneId.systemDefault()).toLocalDate(), LocalDateTime.now());
+    }
 
-        List<String> toReport = customerRepository.findNullReturnedDate()
+    private String toReportLine(CustomerQueryDTO dto, List<UnreturnedFilm> list) {
+        return String.format(
+                "firstName=%s, lastName=%s, email=%s, films=%s",
+                dto.firstName(),
+                dto.lastName(),
+                dto.email(),
+                list
+        );
+    }
+
+    private record UnreturnedFilm(String filmName, Integer delay){};
+
+    public void generateReport() {
+        LocalDateTime weekAgo = LocalDateTime.now().minusDays(7);
+        List<CustomerQueryDTO> query = customerRepository.findNullReturnedDate(weekAgo);
+        Map<Integer, List<UnreturnedFilm>> integerkrotkaMap = query
                 .stream()
-                .map(c ->
-                        new CustomerUnreturnedDTO(
-                                c.firstName(),
-                                c.lastName(),
-                                c.email(),
-                                c.filmTitle(),
-                                (int) ChronoUnit.DAYS.between(
-                                        c.rentalDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate(),
-                                        today)))
-                .filter(c -> c.delay() > 7)
-                .map(Record::toString)
-                .toList();
-        try {
-            SaveToFile.save("report" + LocalDate.now() + ".txt",toReport);
-            log.info("GENERATED REPORT TO FILE: report{}.txt", LocalDate.now());
-        } catch (IOException e) {
-            log.info("ERROR DURING GENERATING REPORT");
-            throw new RuntimeException(e);
-        }
+                .collect(Collectors.groupingBy(
+                        CustomerQueryDTO::customerId,
+                        Collectors.mapping(
+                                dto -> new UnreturnedFilm(dto.filmTitle(), dayDiff(dto.rentalDate())),
+                                Collectors.toList()
+                        )
+                ));
+
+        query.stream()
+                .map(c-> toReportLine(c, integerkrotkaMap.get(c.customerId())))
+                .distinct()
+                .forEach(reportEntry -> kafkaTemplate.send(TOPIC_NAME, reportEntry));
     }
 
     public void deleteUnactiveClinets() {
-        LocalDate today = LocalDate.now();
-        List<Customer> customers = customerRepository.findActiveUsersWithNoFilmsLeftToReturn();
-        for(Customer c: customers){
-            Optional<Rental> optRent = rentalRepository.findLastRentByCustomerId(c.getCustomerId());
-            System.out.println(c.getCustomerId());
-            if(optRent.isPresent()){
-                Rental rental = optRent.get();
-                long diff = ChronoUnit.MONTHS.between(
-                        rental.getReturnDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate(),
-                        today);
-                if(diff > 1){
-                    c.setActivebool(false);
-                    customerRepository.save(c);
-                    log.info("DEACTIVATED CUSTOMER WITH ID: {}",c.getCustomerId()) ;
-                }
-            }
+        LocalDateTime monthAgo = LocalDateTime.now().minusMonths(2);
+        List<CustomerQueryDTO> customers = customerRepository.findActiveUsersWithNoFilmsLeftToReturn(monthAgo);
+        for(CustomerQueryDTO dto: customers){
+            Customer c = customerRepository.findById(dto.customerId()).get();
+            c.setActivebool(false);
+            customerRepository.save(c);
+            log.info("DEACTIVATED CUSTOMER WITH ID: {}",c.getCustomerId()) ;
         }
     }
 }
